--- a/player.html
+++ b/player.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bulma.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Web</title>
 </head>
@@ -523,8 +524,14 @@
       "
       >คุณกำลังฟัง</div>
       <div style="border-bottom: 3px solid #003;"></div>
-      
+      <div style="padding-left: 30px; padding-top: 20px;">
+        <i class="fa fa-play" aria-hidden="true"></i> &nbsp &nbsp
+        <i class="fa fa-step-forward" aria-hidden="true"></i> &nbsp &nbsp
+        <i class="fa fa-window-close" aria-hidden="true"></i>  &nbsp &nbsp
+        <span> TAEYEON FINE  - My Voice Deluxe Album </span>
+      </div>
     </div>
+
 
 
 
